css/main.css
:root {
  --dark-grey: #333333e6;
  --light-grey: #dadada;
  --yellow: hsl(59, 73%, 50%);
  --fill: rgb(11, 106, 90);
  --bg: rgb(247, 247, 247);
}
::-webkit-scrollbar {
  display: none;
}
* {
  padding: 0;
  margin: 0;
  font-family: "M PLUS Rounded 1c", sans-serif;
  color: var(--dark-grey);
  position: relative;
  box-sizing: border-box;
}
body {
  overflow-x: hidden;
}
nav.main {
  border-bottom: 1px dotted var(--light-grey);
  position: fixed;
  display: none;
  height: 56px;
  width: 100vw;
  padding: 0 6vw;
  background-color: white;
  z-index: 11;
  grid-template-columns: auto auto auto auto auto auto auto auto 50px 50px 50px;
  justify-items: left;
  align-items: baseline;
}
nav.main * {
  font-size: 20px;
  line-height: 47px; /* 3px difference to the line height of grid row, so that the yellow underline cut through the border*/
  cursor: pointer;
}
nav.main span {
  border-bottom: 7px solid var(--yellow);
  top: 5px;
}
nav.main span.uncheck {
  color: var(--light-grey);
  border-bottom: none;
}
nav.main a.git {
  grid-column-start: 9;
}
nav.main a {
  text-decoration: none;
  top: 7px;
}
nav.main a img {
  height: 30px;
  top: 9px;
  opacity: 0.9;
}
.burger {
  display: none;
  position: fixed;
  padding-top: 12px;
  padding-left: 3vw;
  font-size: 25px;
  z-index: 110;
  cursor: pointer;
}
.burger p {
  padding: 0;
}

footer {
  font-size: 13px;
  font-weight: 500;
  padding: 1em;
  text-align: center;
  color: var(--dark-grey);
  background: white;
}
.bg-color {
  height: 100vh;
  width: 100vw;
  position: fixed;
  top: 0;
  left: 0;
  background-color: var(--bg);
}
svg {
  position: relative;
  stroke-width: 2;
  stroke-linecap: round;
  stroke-linejoin: round;
  stroke: var(--dark-grey);
  fill: none;
}
svg#title {
  stroke-width: 4;
  z-index: 11;
}
g#i g {
  stroke-width: 0;
}
svg#title text {
  font-size: 29px;
  font-weight: 300;
  fill: var(--dark-grey);
}
svg#title {
  position: fixed;
}
#i {
  transform-origin: 50%;
  stroke-width: 4;
}
.triangleParts {
  stroke-width: 4;
}
svg#changingShape {
  width: 190vw;
  top: -16vw;
  left: -8vw;
  z-index: 13;
}
text {
  stroke-width: 2;
}
.rolling {
  stroke-width: 2.5;
}
/* polygon:not(.shadow):not(.triangle) {
  cursor: pointer;
} */
.shadow {
  stroke: none;
  fill: var(--fill);
  opacity: 0.1;
  /* fill: rgba(255, 255, 255, 0.7); */
  pointer-events: none;
}
path {
  stroke-width: 2;
  stroke: #333333;
  fill: #333333;
}
#changingShape line {
  stroke-width: 1;
  stroke-dasharray: 2 3;
  stroke-dashoffset: 2;
  pointer-events: none;
  opacity: 0.8;
}
.group {
  pointer-events: none;
  font-size: 28px;
  display: none;
  font-weight: 100;
}
foreignObject.other span.project {
  cursor: pointer;
}
foreignObject nav {
  width: 119px; /* not dynamic here, need to change */
  text-align: right;
  font-size: 8px;
  height: 0;
  overflow: hidden;
}
foreignObject p {
  line-height: 24px;
  font-weight: 500;
  pointer-events: none;
  opacity: 0.8;
}
.side-tech {
  font-size: 12px;
}
.side-tech ul {
  list-style: square;
}
.side-tech * {
  font-weight: 300;
  opacity: 0.8;
}
.chart {
  padding-left: 8vw;
  display: grid;
  grid-template-columns: 44vw 32vw;
  grid-gap: 4vw;
}
#about {
  background: white;
  padding: 70px 8vw 70px 8vw;
  display: grid;
  grid-template-columns: 7vw 37vw 32vw;
  grid-gap: 4vw;
}
#about.hide {
  display: none;
}
img.portrait {
  width: 100%;
  height: auto;
}
.status {
  padding: 50px 2vw 50px 4vw;
  border-left: 7px solid white;
  width: 100%;
}
.status p,
#about p,
footer,
.self-others li {
  font-family: "Barlow", sans-serif;
  line-height: 25px;
}
.hide {
  display: none;
}
.status > img {
  width: 80%;
  left: 10%;
  top: -30px;
}
.status p > img {
  display: inline-block;
  height: 35px;
  margin-right: 5px;
}
.status img.use-less {
  height: 20px;
}
.project-group ul {
  list-style: none;
}
.project-group li {
  font-size: 10px;
  line-height: 24px;
}
span.project:not(.grey-out) {
  margin-right: 10px;
  cursor: pointer;
}
.other span.project {
  margin-left: 10px;
  margin-right: 0;
}
.grey-out {
  opacity: 0.3;
}
#single-project {
  z-index: 17;
  position: fixed;
  width: 0;
  height: 0;
  background-color: white;
  opacity: 0.95;
  clip-path: polygon(
    50% 0%,
    85% 15%,
    100% 50%,
    85% 85%,
    50% 100%,
    15% 85%,
    0% 50%,
    15% 15%
  );
  font-size: 16px;
}
#single-project section,
#single-project h3 {
  margin-bottom: 13px;
}
p.close {
  text-align: center;
  cursor: pointer;
  font-size: 1.5em;
}
.desc {
  width: 43%;
  top: 5%;
  text-align: right;
}
.desc h3 {
  width: 70%;
  left: 30%;
}
.notes ul {
  list-style: none;
}
.notes li,
h4 {
  margin-bottom: 0.5em;
}
#single-project .img {
  position: absolute;
  top: 0;
  right: 0;
  width: 50%;
  height: 100%;
}
.img img {
  height: 70%;
  width: auto;
  top: 17%;
}
.cover {
  /* exported gif always have a colored border line, need to cover it up*/
  position: absolute;
  bottom: 0;
  width: 100%;
  height: 15%;
  background-color: white;
}
.type p,
.notes li {
  font-size: 0.9em;
  margin-bottom: 1em;
}
.tech ul {
  list-style: none;
}
.tech ul li {
  display: inline;
}
.url {
  margin: 2em 0;
}
.report {
  line-height: 7px;
}
#single-project svg {
  position: absolute;
  stroke-width: 0.35;
  stroke: var(--light-grey);
  width: 92%;
  left: 4%;
  top: 4%;
}
#single-project-shadow {
  position: fixed;
  clip-path: polygon(
    50% 0%,
    85% 15%,
    100% 50%,
    85% 85%,
    50% 100%,
    15% 85%,
    0% 50%,
    15% 15%
  );
  /* clip-path: polygon(50% 0%, 50% 100%, 15% 85%, 0% 50%, 15% 15%);   */
  background-color: var(--dark-grey);
  opacity: 0.1;
}
.opacity {
  opacity: 0.8;
  font-size: 8px;
}
.contact {
  padding: 2vw;
}
.bold {
  font-weight: 700;
}
.status h3,
h5 {
  margin-top: 1em;
}
h4 {
  margin-top: 2em;
}
.mobile {
  padding: 70px 8vw 0 12vw;
}
.mobile p {
  color: var(--fill);
  font-weight: 300;
}
.self-others ul {
  list-style: square;
}
.bold {
  font-weight: bold;
}
.intro {
  padding-right: 2vw;
}
@media screen and (max-width: 768px) {
  svg#changingShape {
    display: none;
  }
  .burger {
    display: inherit;
  }
  nav.main {
    grid-template-rows: repeat(6, 70px);
    grid-template-columns: auto 50px;
    overflow: scroll;
    padding-left: 12vw;
  }
  nav.main.show {
    height: auto;
  }
  nav.main > * {
    grid-column-start: 1;
  }
  nav.main a.git {
    grid-column-start: 1;
    grid-row-start: 5;
  }
  nav.main a.email {
    position: fixed;
    right: 6vw;
    top: 10px;
    font-size: 0.8em;
  }
  .chart,
  #about {
    padding: 70px 8vw;
    grid-template-columns: 80vw;
    grid-gap: 4vw;
  }
  #about > div:nth-of-type(1) {
    display: grid;
    grid-template-columns: 1fr 1fr;
    grid-template-rows: 100px;
    grid-gap: 4vw;
  }
  img.portrait {
    height: 100%;
    width: auto;
  }
  nav.main span.uncheck {
    color: var(--dark-grey);
  }
  nav.main span:not(.uncheck) {
    grid-row-start: 1;
  }
  #current {
    height: auto;
  }
  .status > img {
    width: 100%;
    position: inherit;
    top: 0;
  }
}

